filen-cli/src/snapshots/filen_cli__ui__tests__ui-2.snap
---
source: filen-cli/src/ui.rs
expression: "large_ui.output.join(\"\\n\")"
---
[38;2;29;87;185m=[1m[38;2;37;87;185m=[1m[38;2;43;87;186m=[1m[38;2;49;88;186m=[1m[38;2;54;88;186m=[1m[38;2;58;88;186m=[1m[38;2;62;88;187m=[1m[38;2;66;89;187m=[1m[38;2;70;89;187m=[1m[38;2;73;89;188m=[1m[38;2;76;89;188m=[1m[38;2;79;90;188m=[1m[38;2;82;90;188m=[1m[38;2;85;90;189m=[1m[38;2;88;91;189m=[1m[38;2;90;91;189m=[1m[38;2;93;91;191m=[1m[38;2;95;91;191m=[1m[38;2;98;92;191m=[1m[38;2;100;92;191m=[1m[38;2;102;92;191m=[1m[38;2;105;93;192m=[1m[38;2;107;93;192m=[1m[38;2;109;93;192m=[1m[38;2;111;94;193m=[1m[38;2;113;94;193m=[1m[38;2;115;94;194m=[1m[38;2;117;94;194m=[1m[38;2;119;95;195m=[1m[38;2;120;95;195m=[1m[38;2;122;95;195m=[1m[38;2;124;96;196m=[1m[38;2;126;96;196m=[1m[38;2;128;96;197m=[1m[38;2;129;97;197m=[1m[38;2;131;97;198m=[1m[38;2;133;97;198m=[1m[38;2;134;98;199m=[1m[38;2;136;98;199m=[1m[38;2;138;98;199m=[1m[38;2;139;99;201m=[1m[38;2;141;99;201m [1m[38;2;142;99;201mF[1m[38;2;144;100;201mi[1m[38;2;146;100;202ml[1m[38;2;147;101;202me[1m[38;2;149;101;203mn[1m[38;2;150;101;203m [1m[38;2;152;102;204mC[1m[38;2;153;102;204mL[1m[38;2;152;105;203mI[1m[38;2;151;108;202m [1m[38;2;150;111;201mv[1m[38;2;149;114;199m0[1m[38;2;148;117;198m.[1m[38;2;147;119;196m2[1m[38;2;145;122;195m.[1m[38;2;144;125;194m0[1m[38;2;143;127;192m [1m[38;2;142;130;191m=[1m[38;2;141;132;191m=[1m[38;2;140;134;188m=[1m[38;2;138;136;187m=[1m[38;2;137;139;185m=[1m[38;2;136;141;184m=[1m[38;2;135;143;182m=[1m[38;2;134;145;181m=[1m[38;2;132;147;181m=[1m[38;2;131;149;178m=[1m[38;2;130;151;177m=[1m[38;2;129;153;175m=[1m[38;2;127;155;173m=[1m[38;2;126;157;172m=[1m[38;2;125;159;171m=[1m[38;2;123;161;169m=[1m[38;2;122;162;167m=[1m[38;2;120;164;165m=[1m[38;2;119;166;164m=[1m[38;2;118;168;162m=[1m[38;2;116;169;161m=[1m[38;2;115;171;159m=[1m[38;2;113;173;157m=[1m[38;2;112;175;155m=[1m[38;2;110;176;153m=[1m[38;2;108;178;152m=[1m[38;2;107;179;151m=[1m[38;2;105;181;148m=[1m[38;2;103;183;146m=[1m[38;2;102;184;144m=[1m[38;2;100;186;142m=[1m[38;2;98;187;141m=[1m[38;2;96;189;138m=[1m[38;2;94;190;136m=[1m[38;2;93;192;134m=[1m[38;2;91;193;132m=[1m[38;2;89;195;129m=[1m[38;2;86;196;127m=[1m[38;2;84;197;125m=[1m[38;2;82;199;122m=[1m[38;2;80;200;121m=[1m
Should just show
[32m✔[0m Success!
[31m✘[0m Something went wrong
[31m✘[0m This is an error
[2mThis is muted text[0m
[2m      Key1[0m Value1
[2mLongerKey2[0m Value2
file1.txt  file2.txt  a_very_long_filename_document.pdf  image.png  video.mp4  archive.zip
