filen-cli/src/snapshots/filen_cli__ui__tests__ui.snap
---
source: filen-cli/src/ui.rs
expression: "small_ui.output.join(\"\\n\")"
---
[38;2;29;87;185m=[1m[38;2;53;88;186m=[1m[38;2;68;89;187m=[1m[38;2;80;90;188m [1m[38;2;91;91;189mF[1m[38;2;100;92;191mi[1m[38;2;108;93;192ml[1m[38;2;116;94;194me[1m[38;2;123;95;195mn[1m[38;2;129;97;197m [1m[38;2;136;98;199mC[1m[38;2;142;99;201mL[1m[38;2;147;101;202mI[1m[38;2;153;102;204m [1m[38;2;150;112;201mv[1m[38;2;146;121;196m0[1m[38;2;142;130;191m.[1m[38;2;138;137;186m0[1m[38;2;134;144;182m.[1m[38;2;130;151;177m0[1m[38;2;125;158;171m-[1m[38;2;121;164;166mt[1m[38;2;116;169;161me[1m[38;2;111;175;155ms[1m[38;2;106;180;148mt[1m[38;2;100;186;142m [1m[38;2;94;191;135m=[1m[38;2;87;196;128m=[1m[38;2;80;200;121m=[1m[0m
Should just show
[32m✔[0m Success!
[31m✘[0m Something went wrong
[2mThis is muted text[0m
[2m      Key1[0m Value1
[2mLongerKey2[0m Value2
file1.txt
file2.txt
a_very_long_filename_document.pdf
image.png
video.mp4
archive.zip
